<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Apps on Devices Sample App</string>

    <string name="terminal_sample_app">NUS Giving</string>
    <string name="new_payment">New donation</string>

    <string name="please_select_reader">Please select a reader first!</string>

    <string name="status_reader_connected">Reader connected!</string>
    <string name="status_reader_offline">Reader offline!</string>
    <string name="unknown_reader">Unknown Reader</string>
    <string name="connected">Connected</string>

    <string name="key_1">1</string>
    <string name="key_2">2</string>
    <string name="key_3">3</string>
    <string name="key_4">4</string>
    <string name="key_5">5</string>
    <string name="key_6">6</string>
    <string name="key_7">7</string>
    <string name="key_8">8</string>
    <string name="key_9">9</string>
    <string name="key_clear">C</string>
    <string name="key_0">0</string>

    <string name="enter_amount">Enter amount</string>
    <string name="default_amount">$0.00</string>
    <string name="request_payment">Request payment</string>
    <string name="checkout">Checkout</string>
    <string name="amount_entered">Amount entered</string>
    <string name="settings">Settings</string>
    <string name="stripe">Stripe</string>
    <string name="back">Back</string>

    <string name="error_fail_to_send_email_receipt">Failed to send receipt email</string>
    <string name="error_fail_to_create_payment_intent">Failed to create PaymentIntent</string>
    <string name="error_fail_to_capture_payment_intent">Failed to capture PaymentIntent</string>

    <string name="send_receipt_tip">How would you like to receive a receipt?</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="print">Print</string>
    <string name="no_receipt">No receipt</string>
    <string name="send">Send</string>
    <string name="invalid_email">"Invalid email"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="select_donation_amount">Select donation amount:</string>
    <string name="confirmt_amount">Confirm amount</string>
    <string name="detail_header">Please enter your details</string>
    <string name="detail_name">Name:</string>
    <string name="detail_email">Email:</string>
    <string name="detail_phone">Phone:</string>
    <string name="detail_identity">NRIC</string>
    <string name="detail_donation_amount">Donation amount:</string>
    <string name="price_custom">Custom</string>
    <string name="detail_donate">Donate</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_header">Enter your personal information via:</string>
    <string name="auth_manual_btn">Manual enter</string>
    <string name="auth_scan_nus_button">Scan NUS Card</string>
    <string name="auth_qr_nus_button">QR code of NUS E-Card</string>
    <string name="singpass">Singpass</string>
</resources>